--- a/assignment3.html
+++ b/assignment3.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -25,7 +26,9 @@
 
 
 			<section>
-			</ul>
+			<div id="output"></div>
+
+			<ul id="outputList"> </ul>
 			</section>
 
 
