Added multiple page requests

--- a/assignment3.html
+++ b/assignment3.html
@@ -20,12 +20,13 @@
 
 					<button type="button" onclick="saveSettings()"> Save Settings </button>  
 
-					<button type="button" onclick="sendRequest()"> SEARCH</button> <br
+					<button type="button" onclick="pagination()"> SEARCH</button> <br
 				</fieldset>
 			</section>
 
 
 			<section>
+				<b> RESULTS: </b><br><br>
 			<div id="output"></div>
 
 			<ul id="outputList"> </ul>
