added some formatting

--- a/assignment3.html
+++ b/assignment3.html
@@ -20,7 +20,7 @@
 
 					<button type="button" onclick="saveSettings()"> Save Settings </button>  
 
-					<button type="button" onclick="pagination()"> SEARCH</button> <br
+					<button type="button" onclick="sendRequest()"> SEARCH</button> <br
 				</fieldset>
 			</section>
 
@@ -30,6 +30,9 @@
 			<div id="output"></div>
 
 			<ul id="outputList"> </ul>
+
+				<b> FAVORITES: </b> <br><br>
+
 			</section>
 
 
