parsed JSON list; created list, added buttons

--- a/assignment3.html
+++ b/assignment3.html
@@ -29,9 +29,8 @@
 				<b> RESULTS: </b><br><br>
 			<div id="output"></div>
 
-			<ul id="outputList"> </ul>
-
-				<b> FAVORITES: </b> <br><br>
+				<b> FAVORITES: </b> 
+				<div id="faves"> </div> <br><br>
 
 			</section>
 
